--- a/src/TUM.Application/TUM.Application.csproj
+++ b/src/TUM.Application/TUM.Application.csproj
@@ -4,6 +4,14 @@
     <ProjectReference Include="..\TUM.Domain\TUM.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.1.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
