--- a/tests/TUM.UnitTests/TUM.UnitTests.csproj
+++ b/tests/TUM.UnitTests/TUM.UnitTests.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="9.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.9.2" />
@@ -18,6 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\TUM.Application\TUM.Application.csproj" />
     <ProjectReference Include="..\..\src\TUM.Domain\TUM.Domain.csproj" />
+    <ProjectReference Include="..\..\src\TUM.Infraestructure\TUM.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
