--- a/src/TUM.Infrastructure/TUM.Infrastructure.csproj
+++ b/src/TUM.Infrastructure/TUM.Infrastructure.csproj
@@ -20,6 +20,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Identity\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
