--- a/src/TUM.Application/TUM.Application.csproj
+++ b/src/TUM.Application/TUM.Application.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="15.1.0" />
     <PackageReference Include="FluentValidation" Version="12.1.0" />
   </ItemGroup>
 
